# Django-csv-data-processing

./: .env.dist  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  Makefile  README.md  TODO  docker-compose.yml  manage.py  patch.patch  pyproject.toml  requirements.txt
backend/datasets/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
backend/datasets/migrations/: 0001_initial.py  0002_auto_20250330_0131.py  0002_auto_20250330_1243.py  0003_auto_20250330_0343.py
backend/templates/layout/: base.html
backend/templates/pages/: dataset_plot.html  upload_file.html  upload_file2.html
backend/utils/exceptions/: FormExceptions.py  HandlerExceptions.py
backend/utils/helpers/: handlers.py
backend/visualizer/: settings.py  urls.py
backend/visualizer/static/visualizer/: script.js  styles.css
frontend/: Dockerfile  package-lock.json
frontend/src/app/: page.tsx
